Update reflection in NMS/OBC